match expression sin imprimir